syntax = "proto3";

option go_package="pkg/service/proto";
import "google/protobuf/timestamp.proto";


message Device {
    string id = 1;
    string token = 2;
    string account_id = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}


service DeviceService {
    
}